--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,8 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "pandas (>=2.2.3,<3.0.0)",
-    "networkx (>=3.4.2,<4.0.0)"
+    "networkx (>=3.4.2,<4.0.0)",
+    "ipykernel (>=6.29.5,<7.0.0)"
 ]
 
 [tool.poetry]
