--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,9 @@ requires-python = ">=3.10"
 dependencies = [
     "pandas (>=2.2.3,<3.0.0)",
     "networkx (>=3.4.2,<4.0.0)",
-    "ipykernel (>=6.29.5,<7.0.0)"
+    "ipykernel (>=6.29.5,<7.0.0)",
+    "seaborn (>=0.13.2,<0.14.0)",
+    "scipy (>=1.15.1,<2.0.0)"
 ]
 
 [tool.poetry]
