--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ dependencies = [
     "networkx (>=3.4.2,<4.0.0)",
     "ipykernel (>=6.29.5,<7.0.0)",
     "seaborn (>=0.13.2,<0.14.0)",
-    "scipy (>=1.15.1,<2.0.0)"
+    "scipy (>=1.15.1,<2.0.0)",
+    "openai (>=1.61.1,<2.0.0)"
 ]
 
 [tool.poetry]
