--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
     "ipykernel (>=6.29.5,<7.0.0)",
     "seaborn (>=0.13.2,<0.14.0)",
     "scipy (>=1.15.1,<2.0.0)",
-    "openai (>=1.61.1,<2.0.0)"
+    "openai (>=1.61.1,<2.0.0)",
+    "config (>=0.5.1,<0.6.0)"
 ]
 
 [tool.poetry]
