--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "seaborn (>=0.13.2,<0.14.0)",
     "scipy (>=1.15.1,<2.0.0)",
     "openai (>=1.61.1,<2.0.0)",
-    "config (>=0.5.1,<0.6.0)"
+    "config (>=0.5.1,<0.6.0)",
+    "python-dotenv (>=1.0.1,<2.0.0)"
 ]
 
 [tool.poetry]
