--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,8 @@ dependencies = [
     "openai (>=1.61.1,<2.0.0)",
     "config (>=0.5.1,<0.6.0)",
     "python-dotenv (>=1.0.1,<2.0.0)",
-    "pydantic (>=2.10.6,<3.0.0)"
+    "pydantic (>=2.10.6,<3.0.0)",
+    "scikit-learn (>=1.6.1,<2.0.0)"
 ]
 
 [tool.poetry]
