--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,8 @@ dependencies = [
     "config (>=0.5.1,<0.6.0)",
     "python-dotenv (>=1.0.1,<2.0.0)",
     "pydantic (>=2.10.6,<3.0.0)",
-    "scikit-learn (>=1.6.1,<2.0.0)"
+    "scikit-learn (>=1.6.1,<2.0.0)",
+    "matplotlib-venn (>=1.1.2,<2.0.0)"
 ]
 
 [tool.poetry]
